fix: Fixed the z-index issues with PopUps in DMs

--- a/CineSync/Components/Converssations/ConverssationUser.razor.css
+++ b/CineSync/Components/Converssations/ConverssationUser.razor.css
@@ -1,23 +1,23 @@
 ﻿.converssation-container {
     display: flex;
     flex-direction: column;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0, 0, 0, 0.7);
     width: 100%;
     height: 100%;
     border-radius: 10px;
     overflow: clip;
-    z-index: 1051;
+    /*z-index: 1051;*/
 }
 
 .top-container {
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    padding:10px;
-    padding-left:20px;
-    padding-right:20px;
-    background-color:black;
-    height:80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: black;
+    height: 80px;
 }
 
 .messages {
@@ -27,35 +27,34 @@
     overflow-y: auto;
     height: 0;
     gap: 10px;
-    padding-top:20px;
+    padding-top: 20px;
 }
 
 .messages .time {
-    text-align:center;
-    font-size:15px;
+    text-align: center;
+    font-size: 15px;
 }
 
-    .messages .time hr {
-        margin: 0 5px;
-        margin-left:20px;
-    }
+.messages .time hr {
+    margin: 0 5px;
+    margin-left: 20px;
+}
 
 
 .bottom {
-    width:100%;
-    height:fit-content;
+    width: 100%;
+    height: fit-content;
 }
 
-.center{
-    justify-content:center;
-    align-items:center;
-    gap:50px;
+.center {
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
 }
 
-.ItemEnvite-container
-{
-    width:100%;
-    padding:10px;
+.ItemEnvite-container {
+    width: 100%;
+    padding: 10px;
 }
 
 .top-container {
@@ -76,11 +75,12 @@
 }
 
 .hover-container {
-    z-index: 5;
+    /*z-index: 5;*/
     top: 0px;
     position: relative;
-    height:0;
+    height: 0;
 }
+
 .notifications-container {
     height: fit-content;
     margin: 10px;
@@ -97,24 +97,22 @@
     gap: 10px;
 }
 
-.notification-title
-{
+.notification-title {
     font-family: Roboto;
-    font-size:20px;
-    text-align:center;
+    font-size: 20px;
+    text-align: center;
 }
 
 .new-message {
-    margin-top:5px;
+    margin-top: 5px;
     position: relative;
     bottom: 10px;
     height: 55.7px;
     width: 100%;
-    z-index: 2;
+    /*z-index: 2;*/
 }
 
-.space
-{
-    height:100px;
-    width:100%;
+.space {
+    height: 100px;
+    width: 100%;
 }
