--- a/CineSync/Components/DMS/EmojiPicker.razor.css
+++ b/CineSync/Components/DMS/EmojiPicker.razor.css
@@ -1,5 +1,6 @@
 .emoji-picker-container {
-    position: sticky;
+    position: absolute;
+    bottom: 50px;
     background-color: #2a2a2a;
     border: 1px solid #ccc;
     border-radius: 10px;
